QJsonValue: fix incorrect to{Array,Object} when the value is empty

This is a repeat of commit de6ced66920600e659dbaa2509526a3bcb0b3360
"QCborValue: fix incorrect to{Array,Map} when the value is empty" (6.4),
which fixed the same thing for QCborValue. I've just copied the exact
same implementation onto the QJsonValue functions.

Fixes: QTBUG-104085
Change-Id: I175efddd75f24ae59057fffd16f6b257bf7ed36d
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>
(cherry picked from commit e114fec62adf13b8c21ca890fb748cb27f391c25)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>