src/corelib/serialization/qjsonarray.cpp
@@ -119,7 +119,6 @@ QJsonArray::QJsonArray() = default;
 QJsonArray::QJsonArray(QCborContainerPrivate *array)
     : a(array)
 {
-    Q_ASSERT(array);
 }
 
 /*!
